[gd_scene load_steps=3 format=3 uid="uid://be3sqxn2abder"]

[ext_resource type="Script" uid="uid://cs0mh84uxg4jo" path="res://UI/in-game/pause_base.gd" id="1_p4jx7"]
[ext_resource type="Theme" uid="uid://drkq4gwhuu362" path="res://mess/ui/shared/graphics/themes/default_label.tres" id="2_xq2th"]

[node name="PauseBase" type="VBoxContainer"]
theme_override_constants/separation = 10
script = ExtResource("1_p4jx7")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource("2_xq2th")
text = "PAUZA"

[node name="Back" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 6
text = "Wznów"

[node name="Save" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 6
text = "Zapisz"

[node name="Settings" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 6
text = "Ustawienia"

[node name="Menu" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 6
text = "Wyjdź do menu"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
